[project]
name = "museable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "bcrypt>=5.0.0",
    "flask>=3.1.2",
    "flask-jwt-extended>=4.7.1",
    "peewee>=4.0.0",
    "pygame-ce>=2.5.6",
    "python-dotenv>=1.2.1",
]
